Fixed wrapping issue with long tags inside tech nav button on tag page

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -2348,21 +2348,26 @@ display: inline-block;
 }
 
 #tag_technav {
-background: #006699 url(/media/images/tag-technavlogo.png) no-repeat 335px 4px;
+background: #006699 url(/media/images/tag-technavlogo.png) no-repeat 335px center;
 width: 450px;
 padding: 8px;
 float: right;
 -moz-border-radius: 10px;
--webkit-border-radius: 10px;
-color: white;   
+-webkit-border-radius: 10px; 
 display: inline-block;
+cursor: pointer;
 -moz-box-shadow: 1px 1px 5px #3F3F3F;
 }
 
 #tag_technav:hover {
-color: white;
-text-decoration: none;
 background-color: orange;
+}
+
+#tag_technav span {
+color: white;   
+text-decoration: none;
+width: 305px;
+display: inline-block;
 }
 
 .tag_list {
